projet_GOCass/tests/bad/testfile-invalid-amp.go
package main

func foo () {}

func main () {
	&3
}
